# fulcrum

./: .gitignore  AGENTS.md  README.md  check_cycles.py  fulcrum.example.toml  fulcrum.toml  port_10255_report.json  pyproject.toml
.opencode/: opencode.jsonc
assets/prowler/: prowler
docs/: ARCHITECTURE.md  CLI.md  python-project-guidelines.md
docs/fulcrum/: BACKUP_PLAN.md  Progress-Tracking.md  markdown-reporting.md  prowler-integration.md  security-dashboard.md
docs/guides/: InfraHardeningGuide.md  MigrationGuide.md
src/: __main__.py  cli.py
src/commands/: config.py  docs.py  report.py  security.py
src/core/: backup.py  catalog.py  collect.py  config.py  diagnostics.py  docs.py  markdown.py  progress.py  remediation.py  report_builder.py  reporting.py  security_logging.py  settings.py  validator.py
src/fulcrum/: cli.py
src/fulcrum/commands/: finops.py  security.py
src/fulcrum/core/: AGENTS.md  __init__.py  logging.py  markdown.py  remediation.py  report_builder.py  reporting.py  secure_file.py  settings.py  templates.py  validator.py
src/fulcrum/gcp/: __init__.py  artifact_registry.py  audit_functions.py  auth.py  client.py  (+5 more)
src/gcp/: AGENTS.md  artifact_registry.py  audit_functions.py  auth.py  backup.py  client.py  decommission.py  iap_remediation.py  logging_quota.py  remediation.py  runner.py
src/prowler/: aggregator.py  api.py  mapping.py  normalize.py  parser.py  runner.py  scanner.py
src/security/: __init__.py  audit.py  port_checker.py
src/templates/: executive_page.j2  report_index.j2  report_page.j2
src/ui/: __init__.py  app.py
tests/: conftest.py  test_catalog.py  test_cli.py  test_cli_defaults.py  test_collectors.py  test_config.py  test_config_cli.py  test_decommission.py  test_finops_integration.py  test_kubernetes_csv.py  test_kubernetes_reporting.py  test_markdown.py  test_prowler_full_fields.py  test_prowler_normalize.py  test_prowler_parser.py  test_reporting_integration.py  test_reporting_paths.py  test_reporting_performance.py  test_security_cli.py  test_security_default_date.py  test_security_ui.py  test_settings.py  test_used_services_summary.py
tests/core/: test_remediation.py
tests/unit/: test_naming.py
(+13 files in other folders)
