[project]
name = "fulcrum"
version = "0.1.0"
description = "Executive GCP catalog CLI with rich TUI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "typer>=0.9.0",
  "textual>=0.52.0",
  "rich>=13.7.0",
  "pydantic>=2.0.0",
  "structlog>=24.0.0",
  "jinja2>=3.1.0",
  "pyyaml>=6.0.0",
  "tomlkit>=0.12.0",
  "google-api-python-client>=2.141.0",
  "google-auth>=2.27.0",
  "google-auth-httplib2>=0.2.0",
  "google-cloud-storage>=2.18.0",
  "google-cloud-compute>=1.14.0",
  "google-cloud-resource-manager>=1.10.0",
  "google-cloud-container>=1.25.0",
  "tenacity>=9.0.0",
  "requests>=2.32.0",
  "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5",
  "pytest-cov>=5.0.0",
  "pytest-mock>=3.12.0",
  "responses>=0.25.0",
]

[project.scripts]
fulcrum = "src.cli:main"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.13"
warn_redundant_casts = true
warn_unused_ignores = true
strict = true

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
